Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-55885

Windows: Wrong mouse buttons state after drag and drop

XMLWordPrintable

      In our application we need some idle processing in the background. We are using QApplication::mouseButtons() as one of our checks in the Idle timer event (see attached example).
      The problem is that this method returns wrong state after drag-n-drop operations on the Windows. Please run attached example under debugger to see qDebug() output.
      There are three kinds of DnD possible:
      a) an internal DnD between two windows of test app;
      b) an external DnD from test app into the Windows Explorer;
      c) an external DnD from Explorer into the test app;
      Note that all kinds of DnD can be canceled with Escape key.
      Bugs:
      1. The mouse button state of QApplication stays wrong after cases b) and c)
      2. Alt modifier key is interpreted as XButton1 during DnD

        1. QtSample-dnd.zip
          25 kB
        2. qtbug55885.zip
          18 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kleint Friedemann Kleint
            lserge Serge Lysenko
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes